# PIOFEAU

./: .gitignore  LICENSE  Makefile  README.md  cleanup.sh  killTensorboardSession.sh  pyproject.toml  requirements.txt  runTensorboardSession.ps1
docs/: README.md  mkdocs.yml
docs/docs/: index.md
docs/docs/api-reference/custom-ml/: custom-ml.md
docs/docs/user-guide/: about.md
notebooks/: OpticalFlowOperatorTraining.ipynb  cnnTrainingNotebook.ipynb  cnnTrainingNotebook_brdesktop.ipynb  unrolling-test.ipynb
reports/typesetting/: Physics-Informed Optical Flow Estimation via Algorithm Unrolling.tex  phys.bib
reports/typesetting/sections/: abstract.tex  conclusion.tex  discussion.tex  experiment_design.tex  future_work.tex  introduction.tex  methods.tex  preliminaries.tex  related_work.tex  results.tex
src/: config.py  dataset.py  features.py  plots.py
src/modeling/: predict.py  train.py
src/modeling/custom-ml/: CustomLayers.py  CustomLosses.py  FlowConv.py  ResidualFlowNET.py
src/modeling/custom-ml/custom-layers/: RegularisationTermLayer.py
src/modeling/custom-ml/custom-models/: ConvolutionalFlowRefiner.py  OpticalFlowUnrolling.py
src/modeling/customML/customLayers/: BiasLayer.py  CostCorrelationLayer.py  DataTermLayer.py  ImagePyramidLayer.py  ImageWarpingLayer.py  RegularisationTermLayer.py
src/modeling/customML/customLosses/: AngularErrorLoss.py  CostVolumeErrorLoss.py  EndPointErrorLoss.py  ImageWarpingErrorLoss.py  (+1 more)
src/modeling/utils/: MPISintelUtils.py  OpticalFlowUtils.py
src/piofe_unrolling/: PCAFlow.py  POIFE_test.py
(+6 files in other folders)
